--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Revision 108:
+* bugfix: Mute ist manchmal bestehen geblieben wenn Gateway Voice entzogen wurde und wieder zurückgegeben wurde
+
+
 Revision 107:
 + es kann nun konfiguriert werden dass die Gateway-deaktiviert Warnung 
   in konfigurierbaren Abständen erneut abgespielt wird
