--- a/FFN-GUI-Switcher/MainWindow.resx
+++ b/FFN-GUI-Switcher/MainWindow.resx
@@ -123,39 +123,6 @@
   <metadata name="ToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>136, 0</value>
   </metadata>
-  <data name="label12.ToolTip" xml:space="preserve">
-    <value>Für den Fall dass das Gateway in einen anderen
-Kanal verschoben wird legt die hier einstellbare
-Zeit in Minuten fest wie lange die Position gehalten
-wird bevor wieder zurück in den Gateway-Channel 
-zurückgewechselt wird.</value>
-  </data>
-  <data name="label13.ToolTip" xml:space="preserve">
-    <value>Häufiger passiert es dass TeamSpeak aus welchen
-Gründen auch immer eine falsche Aussage über seinen
-aktuellen Status trifft. Die hier einstellbare Zahl gibt an
-wieviele Versuche der Switcher unternimmt um ggf.
-herauszubekommen ob es sich um eine falsche Aussage
-handelt oder nicht.</value>
-  </data>
-  <data name="label11.ToolTip" xml:space="preserve">
-    <value>angenommen aus welchen Gründen auch immer
-wird die Internetverbindung unterbrochen. Hier wird
-ein Zeitwert in Sekunden definiert der in diesem Fall
-gewartet wird bis ein erneuter Reconnect-Versuch
-stattfindet.</value>
-  </data>
-  <data name="label1.ToolTip" xml:space="preserve">
-    <value>Hier trägst die Kennung deines Gateways ein die für dich gültig ist
-zb:  
-044 &lt; Gatewaynummer wird dir bei der Registrierung auf dem Server mitgeteilt
-Bamberg &lt; Standort deines Gateways oder Wohnort von dir
-Ofr &lt; Regierungsbezirk deines Standortes
-CB   PMR &lt; Sendefrequenz des Gateways
-CH 5 &lt; Kanalbenutzung
-Achtung: CB-Gateways dürfen NUR auf den 
-Kanälen 11, 29, 34, 39, 61, 71 und 80 betrieben werden</value>
-  </data>
   <data name="checkBox7.ToolTip" xml:space="preserve">
     <value>Diese Einstellung gibt an dass der Switcher das
 Gateway nach der oben angegebenen Wartezeit
@@ -178,6 +145,21 @@ auf Stumm schaltet für die Zeit bis das Gateway
 wieder zurück in den Gatewaychannel wechselt.
 </value>
   </data>
+  <data name="label12.ToolTip" xml:space="preserve">
+    <value>Für den Fall dass das Gateway in einen anderen
+Kanal verschoben wird legt die hier einstellbare
+Zeit in Minuten fest wie lange die Position gehalten
+wird bevor wieder zurück in den Gateway-Channel 
+zurückgewechselt wird.</value>
+  </data>
+  <data name="label13.ToolTip" xml:space="preserve">
+    <value>Häufiger passiert es dass TeamSpeak aus welchen
+Gründen auch immer eine falsche Aussage über seinen
+aktuellen Status trifft. Die hier einstellbare Zahl gibt an
+wieviele Versuche der Switcher unternimmt um ggf.
+herauszubekommen ob es sich um eine falsche Aussage
+handelt oder nicht.</value>
+  </data>
   <data name="numericUpDown9.ToolTip" xml:space="preserve">
     <value>Häufiger passiert es dass TeamSpeak aus welchen
 Gründen auch immer eine falsche Aussage über seinen
@@ -185,6 +167,13 @@ aktuellen Status trifft. Die hier einstellbare Zahl gibt an
 wieviele Versuche der Switcher unternimmt um ggf.
 herauszubekommen ob es sich um eine falsche Aussage
 handelt oder nicht.</value>
+  </data>
+  <data name="label11.ToolTip" xml:space="preserve">
+    <value>angenommen aus welchen Gründen auch immer
+wird die Internetverbindung unterbrochen. Hier wird
+ein Zeitwert in Sekunden definiert der in diesem Fall
+gewartet wird bis ein erneuter Reconnect-Versuch
+stattfindet.</value>
   </data>
   <data name="numericUpDown7.ToolTip" xml:space="preserve">
     <value>angenommen aus welchen Gründen auch immer
@@ -223,6 +212,17 @@ ob serielle (Comportsteuerung/Schaltimpuls damit Funkgerät
 sendet) oder Voice Activation (wird rein durch Sprache oder 
 Geräusche aktiviert)</value>
   </data>
+  <data name="label1.ToolTip" xml:space="preserve">
+    <value>Hier trägst die Kennung deines Gateways ein die für dich gültig ist
+zb:  
+044 &lt; Gatewaynummer wird dir bei der Registrierung auf dem Server mitgeteilt
+Bamberg &lt; Standort deines Gateways oder Wohnort von dir
+Ofr &lt; Regierungsbezirk deines Standortes
+CB   PMR &lt; Sendefrequenz des Gateways
+CH 5 &lt; Kanalbenutzung
+Achtung: CB-Gateways dürfen NUR auf den 
+Kanälen 11, 29, 34, 39, 61, 71 und 80 betrieben werden</value>
+  </data>
   <data name="NicknameTextBox.ToolTip" xml:space="preserve">
     <value>Hier trägst die Kennung deines Gateways ein die für dich gültig ist
 zb:  
@@ -235,6 +235,9 @@ Achtung: CB-Gateways dürfen NUR auf den
 Kanälen 11, 29, 34, 39, 61, 71 und 80 betrieben werden
 </value>
   </data>
+  <metadata name="ToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>136, 0</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
