* updated SetupWizard copyright message * updated readme

--- a/readme
+++ b/readme
@@ -1,4 +1,7 @@
-FFN-Switcher 1.0.0.106
+FFN-Switcher (NG) 1.0.0.113
+
+This is the rewrite of the already existing Teamspeak 2 version
+of this software.
 
 http://www.schrankmonster.de/category/n3rd/freies-funknetz/
 
